--- a/ReadMe
+++ b/ReadMe
@@ -1,1 +1,16 @@
-#ReadMe
+# Pixels
+Contributors: John Tran, Davion Miller, Jingda Yu, Caiden Gilbert, Conrad Sadler
+## Overview
+
+This application is for pixel artists who want to collaboratively and individually create pixel art. If you venture within you will find a blank canvas full of possibilities. 
+Expand those possibilities by making this canvas an exclusive canvas where you can invite your friends for pixel fun. 
+When you are all done with your work of art share it globally by adding it to the global gallery, or keep it private and view it within your own gallery.
+
+## Requirments To Run Application
+...
+## Instructions To Run Application
+...
+## Lets Test The Application
+...
+## The Deployed Version Can Be Found Here
+...
